--- a/husayn.css
+++ b/husayn.css
@@ -1390,6 +1390,10 @@ video {
   justify-items: stretch;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-7 {
   gap: 1.75rem;
 }
@@ -2665,8 +2669,16 @@ main section {
     grid-column: span 4 / span 4;
   }
 
+  .sm\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
   .sm\:row-span-2 {
     grid-row: span 2 / span 2;
+  }
+
+  .sm\:row-span-1 {
+    grid-row: span 1 / span 1;
   }
 
   .sm\:grid-cols-2 {
